# ChangeLog for sys-apps/sg3_utils
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/sg3_utils/ChangeLog,v 1.52 2009/07/15 18:45:34 nixnut Exp $

  15 Jul 2009; nixnut <nixnut@gentoo.org> sg3_utils-1.27.ebuild:
  ppc stable #273076

  22 Jun 2009; Raúl Porcel <armin76@gentoo.org> sg3_utils-1.27.ebuild:
  ia64 stable wrt #273076

  19 Jun 2009; Brent Baude <ranger@gentoo.org> sg3_utils-1.27.ebuild:
  stable ppc64, bug 273076

  11 Jun 2009; Tiago Cunha <tcunha@gentoo.org> sg3_utils-1.27.ebuild:
  stable sparc, bug 273076

  10 Jun 2009; Markus Meier <maekke@gentoo.org> sg3_utils-1.27.ebuild:
  amd64/x86 stable, bug #273076

  08 Jun 2009; Jeroen Roovers <jer@gentoo.org> sg3_utils-1.27.ebuild:
  Stable for HPPA (bug #273076).

  11 Feb 2009; Robin H. Johnson <robbat2@gentoo.org> sg3_utils-1.25.ebuild,
  sg3_utils-1.26.ebuild, sg3_utils-1.26-r1.ebuild, sg3_utils-1.27.ebuild:
  Bug 258388: new hosting location.

*sg3_utils-1.27 (18 Aug 2008)

  18 Aug 2008; Mike Frysinger <vapier@gentoo.org> +sg3_utils-1.27.ebuild:
  Version bump and rename libsgutils2 back to libsgutils #231089.

  27 Jun 2008; Robin H. Johnson <robbat2@gentoo.org>
  -files/sg3_utils-llseek.patch, -sg3_utils-1.11.ebuild,
  -sg3_utils-1.21.ebuild, -sg3_utils-1.22.ebuild, -sg3_utils-1.23.ebuild,
  -sg3_utils-1.24.ebuild:
  Cleanup old ebuilds.

*sg3_utils-1.26-r1 (27 Jun 2008)

  27 Jun 2008; Robin H. Johnson <robbat2@gentoo.org>
  +files/sg3_utils-1.26-stdint.patch, +sg3_utils-1.26-r1.ebuild:
  Bug #229653, fix need for stdint.h headers thanks to Ed Catmur
  <ed@catmur.co.uk>.

*sg3_utils-1.26 (25 Jun 2008)

  25 Jun 2008; Robin H. Johnson <robbat2@gentoo.org> +sg3_utils-1.26.ebuild:
  Version bump.

  22 Mar 2008; Santiago M. Mola <coldwind@gentoo.org> sg3_utils-1.25.ebuild:
  amd64 stable wrt bug #205925

  31 Jan 2008; nixnut <nixnut@gentoo.org> sg3_utils-1.25.ebuild:
  Stable on ppc wrt bug 205925
