@@ -5,6 +5,7 @@ DIST sg3_utils-1.27.tgz 859815 RMD160 f731764d7351ec387d5b8745d5da22fbc81a5c62 S
 EBUILD sg3_utils-1.25.ebuild 779 RMD160 0740b74895f25d44157df56ee57b76b4e73c645b SHA1 12f18058b7fe8ca3251008916c90b68ee1c88889 SHA256 ddf41063ec6c92b024de08fbe49c72970635dfc5860ca561a46e971ce303747a
 EBUILD sg3_utils-1.26-r1.ebuild 875 RMD160 d27b0f3238fcd6b6d3735e6e325f2447e7d5d1f4 SHA1 49e424d570de2e0ac6b118bc965038fa58d1449b SHA256 c7eeb83d97bd72cec81be3406e1caa72ed21f1a2d83550538692e4cf15c985dd
 EBUILD sg3_utils-1.26.ebuild 784 RMD160 cf39a26fb474758594804625023c91d94aaacef0 SHA1 e8bf0c873a081e77e0baa92fd1f68447d5714a80 SHA256 787cddbd3a2d30d5aa57c54bbc1056e3f7f7c70b7a27d0f7facfc1e7ceb7fb51
+EBUILD sg3_utils-1.27-r1.ebuild 1134 RMD160 9a848ff9743ba06bdcb417dc1e619796294244b6 SHA1 5906de660c782ffb0fa1464fb471a431ad0e9569 SHA256 fad09c83b0075b7461a681ebdee07529d4b889221b5826c7a70a0dbe5a209a03
 EBUILD sg3_utils-1.27.ebuild 939 RMD160 cdda8c7ae7866c750f701e1a6a582e73cb94893f SHA1 edd5ac687ddde5e63c61cbd6d1d7e38916e94777 SHA256 a437e094c45b1a72a6ac8f3120248912f0fcd5c4d431b9252d1f3451afc8f142
-MISC ChangeLog 6855 RMD160 4ae2352d34ae60c323b783ff70c685e77bdd4de1 SHA1 2f1cbcc6f2d9ec76ebf7671a340cec8c197df627 SHA256 698ff7218cf30fbf1cdfb5f60b0e064679e1db5fd29b8ab39bf7873a98122e92
+MISC ChangeLog 7036 RMD160 806d7fc93bcc478604e69b5018f536a12f3fb91e SHA1 90128f41161d5dca492f8205ae4a4a54720541b1 SHA256 eeead87a0d839fb0cd47e0916aeea0b914a856fbcd7229f126e4fd2e37927592
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
