@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/sg3_utils
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/sg3_utils/ChangeLog,v 1.52 2009/07/15 18:45:34 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/sg3_utils/ChangeLog,v 1.53 2009/07/20 16:57:58 nirbheek Exp $
+
+*sg3_utils-1.27-r1 (20 Jul 2009)
+
+  20 Jul 2009; Nirbheek Chauhan <nirbheek@gentoo.org>
+  +sg3_utils-1.27-r1.ebuild:
+  Better fix for bug 231089; some packages look for sgutils2
 
   15 Jul 2009; nixnut <nixnut@gentoo.org> sg3_utils-1.27.ebuild:
   ppc stable #273076
